force-app/main/default/objects/LLC_BI__Collateral_History__c/LLC_BI__Collateral_History__c.object-meta.xml
<CustomObject>
    <description>The Collateral History Object is used to track the history of collateral used to secure loans.</description>
    <label>Collateral History</label>
    <nameField>
        <displayFormat>CH-{00000000}</displayFormat>
        <label>Collateral History Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Collateral History</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>