force-app/main/default/objects/LLC_BI__Collateral_History__c/fields/LLC_BI__Loan_Collateral__c.field-meta.xml
<CustomField>
    <fullName>LLC_BI__Loan_Collateral__c</fullName>
    <description>This field is automatically populated. This field is a Master- Detail field, used to look up the collateral that this collateral history is associated to.</description>
    <label>Loan Collateral</label>
    <referenceTo>LLC_BI__Loan_Collateral__c</referenceTo>
    <relationshipLabel>Collateral History</relationshipLabel>
    <relationshipName>Collateral_History</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>