force-app/main/default/objects/LLC_BI__Collateral_History__c/fields/LLC_BI__Type__c.field-meta.xml
<CustomField>
    <fullName>LLC_BI__Type__c</fullName>
    <description>This field is optional. It is manually populated. It allows users to enter additional details about the type of collateral used to secure a loan.</description>
    <label>Type</label>
    <length>100</length>
    <type>Text</type>
</CustomField>